src/components/PhotoDetails.css
.chevron-icon {
  /* Taille fixe pour éviter le déplacement des éléments */
  width: 36px;
  height: 36px;

  /* Permet de centrer l’icône à l’intérieur de ce carré */
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  cursor: pointer;
  margin-right: 10px;

  /* Bordure transparente initialement, même épaisseur que celle en hover */
  border: 1px solid transparent;
  border-radius: 50%;

  /* Pour une transition douce */
  transition: border 0.3s ease, transform 0.2s ease;
  box-sizing: border-box;
}

/* Survol */
.chevron-icon:hover {
  border-color: gray; /* deviens visible au hover */
  
}

.button-area {
margin-top: 20px;
display: flex;
justify-content: center;
align-items: center;
gap: 15px;
background-color: lightgray;
width: 250px;
border-top-right-radius: 10px;
border-top-left-radius: 10px;
border-bottom-right-radius: 10px;
border-bottom-left-radius: 10px;
border: gray 1px solid;

}

.image {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  
}

.picture-area {
  margin: 10px auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 600px;
}


/* Masquer le chevron sur les écrans inférieurs à 425px */
@media (max-width: 425px) {
  .chevron-icon {
    display: none;
  }
}

@keyframes dreamBlur {
  0% {
    filter: blur(10px);
  }
  10% {
    filter: blur(9px);
  }
  20% {
    filter: blur(8px);
  }
  30% {
    filter: blur(7px);
  }
  40% {
    filter: blur(6px);
  }
  50% {
    filter: blur(5px);
  }
  60% {
    filter: blur(6px);
  }
  70% {
    filter: blur(5px);
  }
  80% {
    filter: blur(4px);
  }
  85% {
    filter: blur(3px);
  }
  90% {
    filter: blur(2px);
  }
  95% {
    filter: blur(1px);
  }
  100% {
    filter: blur(0px);
  }
}

.dream-effect {
  animation: dreamBlur 0.8s ease-in-out forwards;
}

